--- a/style.css
+++ b/style.css
@@ -4,75 +4,67 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-.container{
-    width: 100%;
-    min-height: 100%;
-    background: #ffe8f0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body{
+    background: #001e4d;
 }
-.testimonial{
+.app{
+    background: #fff;
     width: 90%;
-    max-width: 800px;
-    margin: auto;
+    max-width: 600px;
+    margin: 100px auto 0;
+    border-radius: 10px;
+    padding: 30px;
 }
-.testimonial-text{
-    background: #ff0058;
-    color: #fff;
+.app h1{
+    font-size: 25px;
+    color: #001e4d;
+    font-weight: 600;
+    border-bottom: 1px solid #333;
+    padding-bottom: 30px;
+}
+.quiz{
+    padding: 20px 0;
+}
+.quiz h2{
+    font-size: 18px;
+    color: #001e4d;
+    font-weight: 600;
+}
+.btn{
+    background: #fff;
+    color: #222;
+    font-weight: 500;
     width: 100%;
-    height: 350px;
-    position: relative;
-    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+    border: 1px solid #222;
+    padding: 10px;
+    margin: 10px 0;
+    text-align: left;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s;
 }
-.user-text{
-    width: 80%;
-    text-align: center;
-    line-height: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.btn:hover:not([disabled]){
+    background: #222;
+    color: #fff;
+}
+.btn:disabled{
+    cursor: no-drop;
+}
+#next-btn{
+    background: #001e4d;
+    color: #fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
+    cursor: pointer;
     display: none;
 }
-.user-text .fas{
-    font-size: 30px;
-    margin-bottom: 50px;
-    margin-top: 20px;
+.correct{
+    background: #9aeabc;
 }
-.user-text span{
-    display: block;
-    font-size: 13px;
-    margin-top: 70px;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-.testimonial-pic{
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.user-pic{
-    width: 65px;
-    padding: 5px;
-    border-radius: 50%;
-    margin: 10px;
-    cursor: pointer;
-}
-.user-text.active-text{
-    display: block;
-    animation: moveup 3s linear forwards;
-}
-.user-pic.active-pic{
-    width: 100px;
-    border: 3px solid #ff0058;
-}
-@keyframes moveup{
-    0%{
-        margin-top: 25px;
-    }
-    100%{
-        margin-top: 0px;
-    }
+.incorrect{
+    background: #ff9393;
 }
